# ArizoRae_v2

./: .env.example  .gitignore  ArizoRae_v2.code-workspace  CLAUDE.md  README.MD
agent-worker/: CLAUDE.md  Dockerfile  pyproject.toml
agent-worker/app/: auth.py  config.py  db.py  fs.py  main.py  quota.py  sdk_client.py  skill_loader.py
agent-worker/app/workflows/: _base.py  analyse.py  chat.py  cv.py  entretien.py  init.py  lettre.py  recherche.py  scraper_adapt.py  scraper_gen.py
agent-worker/tests/: conftest.py  test_model_routing.py  test_prompt_caching.py
docs/: GLOSSARY.md  ROADMAP.md  RUNBOOK.md
docs/adr/: 0001-stack-choice.md  0002-model-routing.md  0003-prompt-caching-strategy.md  0004-user-data-layout.md  0005-scraper-per-user.md  0006-caddy-over-traefik.md  0007-auth-nextauth-credentials.md  0008-multi-provider-openai.md
docs/prompts/: Claude_PLAN-INIT.MD  PLAN-mode-economique.md  claude-init-project-prompt.md
docs/rae-generic-skill-extract/: SKILL.md
infra/: CLAUDE.md  docker-compose.yml
infra/caddy/: Caddyfile
infra/gotify/: config.yml
infra/postgres/: init.sql
infra/terminal/: Dockerfile
portal/: CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
portal/prisma/: schema.prisma
scraper-worker/: CLAUDE.md  Dockerfile  pyproject.toml
scraper-worker/app/: beat_tasks.py  celery_app.py  config.py  db.py  fs.py  runner.py  tasks.py
scraper-worker/templates/: scraper.template.py
scripts/: claude-init-project-prompt.md  job_scraper-example.py
skills/: rae-generic.skill
(+84 files in other folders)
