[project]
name = "arizorae-agent-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.39",
    "claude-agent-sdk>=0.1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "sse-starlette>=2.1",
    "cryptography>=43.0",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
