[project]
name = "arizorae-scraper-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "playwright>=1.48",
    "structlog>=24.4",
    "httpx>=0.27",
    "cryptography>=43.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-celery>=1.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
